# dmenu-notify

./: Cargo.toml  README.md
src/: main.rs
