[package]
name = "dmenu-notify"
version = "0.1.0"
authors = ["Hayley Hughes <hayley@foxes.systems>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dmenu_facade = "0.2.0"
serde = { version = "1.0.111", features = ["derive"] }
zbus = "1.3.0"
zvariant = "2.3.0"
